--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ project(my_engine
 ###############################
 #       Compiler Options      #
 ###############################
-#set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 20)
 #set(CMAKE_EXE_LINKER_FLAGS "-static")
 
 ###############################
