Currently working on fully implementing normal mapping. Saving work before adding Assimp for tangent calculations. I also need to redesign how the descriptors are set up in the event certain objects don't have normal/specular mapping.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ add_subdirectory(vendor/glfw)
 add_subdirectory(vendor/glm)
 add_subdirectory(vendor/vma)
 add_subdirectory(vendor/tiny_obj_loader)
+add_subdirectory(vendor/assimp)
 
 set(IMGUI_SRC
         vendor/imgui/imgui.cpp
@@ -73,4 +74,5 @@ target_link_libraries(${PROJECT_NAME}
         Vulkan::Vulkan
         shaderc_shared
         VulkanMemoryAllocator
-        tinyobjloader)
+        tinyobjloader
+        assimp)
