--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "vendor/tiny_obj_loader"]
 	path = vendor/tiny_obj_loader
 	url = https://github.com/tinyobjloader/tinyobjloader
+[submodule "vendor/assimp"]
+	path = vendor/assimp
+	url = https://github.com/assimp/assimp
