Current commit is broken. Only pushing so that I can continue working on another device. Right now I am trying to re-structure descriptor sets and how objects in the world interact with each other.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ add_subdirectory(vendor/glm)
 add_subdirectory(vendor/vma)
 add_subdirectory(vendor/tiny_obj_loader)
 add_subdirectory(vendor/assimp)
+add_subdirectory(vendor/json)
 
 set(IMGUI_SRC
         vendor/imgui/imgui.cpp
@@ -69,10 +70,12 @@ target_link_directories(${PROJECT_NAME} PRIVATE
         ${Vulkan_INCLUDE_DIR}/../Lib)
 
 target_link_libraries(${PROJECT_NAME}
+        PRIVATE
         glfw
         glm::glm
         Vulkan::Vulkan
         shaderc_shared
         VulkanMemoryAllocator
         tinyobjloader
-        assimp)
+        assimp
+        nlohmann_json::nlohmann_json)
