Major structural changes. Key aspects of the renderer have been seperated into different files such as renderer context and buffer allocation. To make my life easier for the time being, I will create everything inside the Main.cpp file. This file will represent the client application using the rendering engines resources.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,27 +40,33 @@ add_executable(${PROJECT_NAME}
         ${IMGUI_SRC}
 
         # engine test file
-        "sandbox/main.cpp"
+        "sandbox/Main.cpp"
 
         # engine source
         "src/window.cpp"
-        "src/engine_platform.cpp"
-        "src/quaternion_camera.cpp"
-        "src/entity.cpp"
-        "src/input.cpp"
+        "src/Camera.cpp"
+        "src/Entity.cpp"
+        "src/Input.cpp"
 
         # engine rendering
-        "src/rendering/vulkan_renderer.cpp"
-        "src/rendering/ui.cpp"
+        "src/Renderer/Renderer.cpp"
+        "src/Renderer/UI.cpp"
 
         # precompiled header
         # note: this is required to compile header only files such as STB
         # note: this will be removed in the future.
-        "src/pch.cpp")
+        "src/PCH.cpp"
+        "src/Model.cpp"
+        "src/Renderer/Texture.cpp"
+        "src/Vertex.cpp"
+        "src/Renderer/VertexArray.cpp"
+        "src/Renderer/Buffer.cpp"
+        "src/Renderer/Shader.cpp"
+        "src/Renderer/RendererContext.cpp")
 
 
 target_precompile_headers(${PROJECT_NAME} PRIVATE
-        src/pch.hpp)
+        src/PCH.hpp)
 
 target_include_directories(${PROJECT_NAME} PRIVATE
         vendor/stb
