Added the Crypto++ library that will be used for encryption for the custom model format.

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "vendor/assimp"]
 	path = vendor/assimp
 	url = https://github.com/assimp/assimp
+[submodule "vendor/cryptopp"]
+	path = vendor/cryptopp
+	url = https://github.com/abdes/cryptopp-cmake
