Made quite a few changes to the renderer structure. Some objects such as the shader compiler and pools were moved out of the renderer context as it's reserved for objects that create other objects.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,7 @@ add_executable(${PROJECT_NAME}
         "src/renderer/vertex_array.cpp"
         "src/renderer/buffer.cpp"
         "src/renderer/shader.cpp"
-        "src/renderer/renderer_context.cpp"
+        "src/renderer/context.cpp"
 
         # precompiled header
         # note: this is required to compile header only files such as STB, VMA
