Added some basic filesystem iteration and combined that with the ui system. Will need to continue working on this in order to be able to fully interact with files and folders on a system. One notable mention is that performance seems to greatly decrease when more elements are rendered. This makes sense however, I should look at this more closely.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,11 +66,12 @@ add_executable(${PROJECT_NAME}
         "src/renderer/shader.cpp"
         "src/renderer/context.cpp"
         "src/vfs.cpp"
+        "src/filesystem.cpp"
 
         # precompiled header
         # note: this is required to compile header only files such as STB, VMA
         # note: this will be removed in the future.
-        "src/pch.cpp")
+        "src/pch.cpp" )
 
 
 target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch.hpp)
