Added some basic normal and specular mapping. Models can be loaded with textures automatically.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,7 @@ add_executable(${PROJECT_NAME}
         "src/utility.cpp"
         "src/material.cpp"
         "src/renderer/renderer.cpp"
-        "src/renderer/ui.cpp"
+        "src/ui/ui.cpp"
         "src/renderer/vertex_array.cpp"
         "src/renderer/buffer.cpp"
         "src/renderer/shader.cpp"
