Mainly worked on the UI and adding some basic elements that will be required for the encryption system. Also changed some formatting within the code.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(vmve
         DESCRIPTION "My custom rendering engine"
         LANGUAGES CXX)
 
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
 ###############################
 #       Compiler Options      #
 ###############################
