--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,11 +77,12 @@ add_executable(${PROJECT_NAME}
         "src/core/platform/windows.cpp"
         "src/time.cpp"
         "src/core/command_line.cpp"
+        "src/rendering/directx/context.cpp"
 
         # precompiled header
         # note: this is required to compile header only files such as STB, VMA
         # note: this will be removed in the future.
-        "src/pch.cpp" "src/rendering/directx/context.cpp")
+        "src/pch.cpp" )
         
      
 
