Fixed IV not being generated. The issue was that I was using HexDecoder instead of HexEncoder. A difference of two characters...

--- a/vmve/vmve.vcxproj
+++ b/vmve/vmve.vcxproj
@@ -89,6 +89,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\security.cpp" />
     <ClCompile Include="src\vmve.cpp" />
     <ClCompile Include="vendor\imgui\imgui.cpp" />
     <ClCompile Include="vendor\imgui\ImGuizmo.cpp" />
