--- a/vmve/vmve.vcxproj
+++ b/vmve/vmve.vcxproj
@@ -90,6 +90,7 @@
   <ItemGroup>
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\security.cpp" />
+    <ClCompile Include="src\ui.cpp" />
     <ClCompile Include="src\vmve.cpp" />
     <ClCompile Include="vendor\imgui\imgui.cpp" />
     <ClCompile Include="vendor\imgui\ImGuizmo.cpp" />
