--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -111,6 +111,9 @@
     <ClCompile Include="src\rendering\directx\d3d_context.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\audio\audio.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\core\platform\windows.hpp">
@@ -207,6 +210,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\rendering\directx\d3d_context.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\audio\audio.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
