--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClCompile Include="src\audio\audio.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\core\win32_window.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\core\platform\windows.hpp">
@@ -213,6 +216,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\audio\audio.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\core\win32_window.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
