Additional changes from the previous commit.

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,16 @@ build/
 out/
 .vs/
 
+# Build directories
 engine/build
 vmve/build
+
+# Project vendor files
+engine/vendor/
 vmve/vendor/
+
 imgui.ini
+
+# NOTE: Is produced because of a bug in Visual Studio and should be fixed
+# in the February 2023 patch.
 */JSON
